--- a/foundry.toml
+++ b/foundry.toml
@@ -4,3 +4,8 @@ out = "out"
 libs = ["lib"]
 
 # See more config options https://github.com/foundry-rs/foundry/tree/master/config
+#
+[rpc_endpoints]
+viction = "https://rpc.viction.xyz/"
+viction_testnet = "https://rpc-testnet.viction.xyz/"
+
